--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
   <body>
     <h1>My Face Recognition Website</h1>
     <div class="buttons">
-      <div class="checkin">
-        <button class="checkin_button">checkin</button>
-      </div>
-      <div class="checkout">
-        <button class="checkout-button">checkout</button>
+      <form method = 'post' enctype=multipart/form-data>
+        <input type="submit" name="checkin_button" value="checkin" />
+        <!--    <button class="checkin_button" name="checkin_button">checkin</button> -->
+      <form method = 'post' enctype=multipart/form-data>
+        <input type="submit" name="checkout_button" value="checkout" />
+        <!--  <button class="checkout-button" name="checkout-button">checkout</button> -->
       </div>
     </div>
   </body>
